# revu

./: Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  config.example.toml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  auth.rs  cache.rs  events.rs  keybindings.rs  main.rs  settings.rs  syntax_highlight.rs  theme.rs
src/diff/: mod.rs  parser.rs
src/github/: client.rs  client_test.rs  mod.rs  models.rs
src/ui/: diff_view.rs  layout.rs  mod.rs  navigation.rs  sidebar.rs
themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  one-dark.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
