[package]
name = "revu"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# GitHub API
octocrab = "0.45"
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
url = "2.5"
regex = "1.11"
similar = "2.6"
chrono = "0.4"
futures = "0.3"
lru = "0.16"

# HTTP client for raw diffs
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.9"

# Syntax highlighting
syntect = { version = "5.3", default-features = false, features = ["parsing", "default-themes", "default-syntaxes", "regex-fancy"] }
once_cell = "1.20"

[dev-dependencies]
tempfile = "3.8"